# mcp-gmpy2

./: CHANGELOG.md  README.md  SPEC.md  mcp.json  pyproject.toml  server.json
.github/workflows/: pypi-publish.yml
src/mcp_gmpy2/: __init__.py  __main__.py  mcp.py
tests/: test_main.py  test_mcp.py
